<resources>
    <string name="directory_title">Directory</string>
    <string name="mobile_number">Mobile number</string>
    <string name="contact_person">Contact Person</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="details">Details</string>
    <string name="no_connection">Please check your internet connection.</string>
</resources>